[package]
name = "train-signalling"
version = "0.1.0"
authors = ["kleines Filmröllchen <filmroellchen@serenityos.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "train-signalling"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "1"
embedded-io = { version = "0.6.1", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "21342dcace7184f01fdc4e9703b01197bd4b4b4f"
features = ["arduino-uno"]

[dependencies.embedded-hal-legacy]
version = "0.2.3"
package = "embedded-hal"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = "fat"
opt-level = "s"
