[package]
name = "train-signalling"
version = "0.1.0"
authors = ["kleines Filmröllchen <filmroellchen@serenityos.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "train-signalling"
test = false
bench = false

[dependencies]
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "1"
panic-serial = { version = "0.1.2", default-features = false, features = [
	"location",
] }
arrayvec = { version = "0.7.4", default-features = false }

[dependencies.avr-device]
version = "0.5.4"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "21342dcace7184f01fdc4e9703b01197bd4b4b4f"
features = ["arduino-nano", "critical-section-impl"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = "fat"
opt-level = "z"
